# local_clintrial_agent

./: .gitignore  AGENTS.md  Fundamentals_of_Clinical_Trials.md  LICENSE  MODEL_BENCHMARK.md  NCT03634982_analysis.json  NCT03989115_analysis.json  NCT04167462_analysis.json  NCT05462717_analysis.json  NCT06040541_analysis.json  NCT06088043_analysis.json  NCT06162221_analysis.json  NCT06220604_analysis.json  NCT06445062_analysis.json  NCT06625320_analysis.json  NCT07262619_analysis.json  NCT07349537_analysis.json  README.md  agent_prompt.txt  analyze_top_10_trials.py  clinical_agent_mcp.py  clinical_trials_study_plan.md  compare_models.py  compare_three_tyk2_trials.py  compare_tyk2_trials.py  convert_pdf.py  cran_task_view_mapping.md  debug.txt  design_agent_pipeline.py  extract_real.py  final_agent_pipeline.py  get_top_10_tyk2.py  llm_agent_pipeline.py  llm_analysis.py  model_comparison.json  nct02518605.json  pipeline_config.yaml  power_visualization.py  pyproject.toml  research.md  (+18 more)
analysis_json/: NCT00526643_analysis.json  NCT03634982_analysis.json  NCT03989115_analysis.json  NCT04167462_analysis.json  NCT04303780_analysis.json  NCT05054725_analysis.json  NCT05379985_analysis.json  NCT05462717_analysis.json  NCT06040541_analysis.json  NCT06088043_analysis.json  NCT06088043_graph_report.txt  NCT06088043_swarm_report.txt  NCT06090539_analysis.json  NCT06162221_analysis.json  NCT06220604_analysis.json  NCT06445062_analysis.json  NCT06625320_analysis.json  NCT06625320_graph_report.txt  NCT06625320_swarm_report.txt  NCT06710847_analysis.json  NCT06864013_llm_analysis.json  (+13 more)
(+31 files in other folders)
